--- a/slides/foreman-intro.html
+++ b/slides/foreman-intro.html
@@ -71,16 +71,7 @@ ready(function() {
     }
 });
 </script>
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-42322531-1', 'strut.io');
-    ga('send', 'pageview');
-    </script>
-<style type="text/css"></style></head>
+</head>
 <body class="impress-supported impress-enabled" style="height: 100%; overflow: hidden;">
 <style type="text/css">
 .strut-surface .themedArea h1, 
